# appfollow_test

./: .gitignore  README.md  docker-compose.yml
api/: Dockerfile  app.py  db_utils.py  main.py  pyproject.toml  schemas.py  setup.cfg
fetcher/: Dockerfile  db_utils.py  extractor.py  pictures.py  pyproject.toml  setup.cfg
frontend/: Dockerfile  nginx-server.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.vue
frontend/src/components/: Permissions.vue
permission_fetcher/: Pipfile  custom_types.py  db_utils.py  extractor.py  main.py  pictures.py  setup.cfg
permission_viewer/: Pipfile  db_utils.py  main.py  schemas.py  setup.cfg
