[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Boger <kotvberloge@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.6.2"
motor = "^2.1.0"
marshmallow = "^3.3.0"

[tool.poetry.dev-dependencies]
mypy = "^0.761"
wemake-python-styleguide = "^0.13.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
