[tool.poetry]
name = "fetcher"
version = "0.1.0"
description = ""
authors = ["Boger <kotvberloge@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.6.2"
motor = "^2.1.0"
wemake-python-styleguide = "^0.13.4"

[tool.poetry.dev-dependencies]
mypy = "^0.761"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
